test-policies/team-security/04-image-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-image-repos
  labels:
    owner-team: security-team
    cape-policy/managed: "true"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "team-security"
  parameters:
    repos:
      - "mycompany.com/"
